Se agregan subpaginas

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 
                     <div class="col-xl-pantalla col-lg-3 col-sm-6">
                       <a
-                        href="https://pokemongo.com/es_MX/gowildarea"
+                        href="https://pokemongo.com/es_MX/gotour/global"
                         target="_blank"
                         rel="noopener noreferrer"
                       >
@@ -559,9 +559,9 @@
          Vendor → Plugins → Tu código
     ========================== -->
     <!-- UI común -->
-    <script src="assets/js/menu.js" defer></script>
-    <script src="assets/js/footer.js" defer></script>
-    <script src="assets/js/politicas.js" defer></script>
+    <script src="assets/js/menu.js"></script>
+    <script src="assets/js/footer.js"></script>
+    <script src="assets/js/politicas.js"></script>
 
     <!-- Vendor -->
     <script src="libs/jquery/jquery.min.js" defer></script>
@@ -580,9 +580,9 @@
     <script src="assets/js/events-past.js" defer></script>
 
     <!-- Firebase (Firestore/Auth) -->
-    <script src="https://www.gstatic.com/firebasejs/11.1.0/firebase-app-compat.js" defer></script>
-    <script src="https://www.gstatic.com/firebasejs/11.1.0/firebase-firestore-compat.js" defer></script>
-    <script src="https://www.gstatic.com/firebasejs/11.1.0/firebase-auth-compat.js" defer></script>
+    <script src="https://www.gstatic.com/firebasejs/11.1.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/11.1.0/firebase-firestore-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/11.1.0/firebase-auth-compat.js"></script>
 
     <!-- Medallero -->
     <script src="assets/js/medallero-index.js" defer></script>
