Ajustes a menu mobile

--- a/index.html
+++ b/index.html
@@ -555,29 +555,29 @@
     </div>
 
     <!-- =========================
-         SCRIPTS (todo con defer)
+         SCRIPTS 
          Vendor → Plugins → Tu código
     ========================== -->
     <!-- UI común -->
-    <script src="assets/js/menu.js"></script>
+    <script defer  src="assets/js/menu.js"></script>
     <script src="assets/js/footer.js"></script>
     <script src="assets/js/politicas.js"></script>
 
     <!-- Vendor -->
-    <script src="libs/jquery/jquery.min.js" defer></script>
-    <script src="libs/bootstrap/js/bootstrap.min.js" defer></script>
+    <script src="libs/jquery/jquery.min.js"></script>
+    <script src="libs/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Plugins / Template -->
-    <script src="assets/js/isotope.min.js" defer></script>
-    <script src="assets/js/owl-carousel.js" defer></script>
-    <script src="assets/js/tabs.js" defer></script>
-    <script src="assets/js/popup.js" defer></script>
-    <script src="assets/js/custom.js" defer></script>
+    <script src="assets/js/isotope.min.js"></script>
+    <script src="assets/js/owl-carousel.js"></script>
+    <script src="assets/js/tabs.js"></script>
+    <script src="assets/js/popup.js"></script>
+    <script src="assets/js/custom.js"></script>
 
     <!-- Feature scripts -->
-    <script src="assets/js/promo-tienda.js" defer></script>
-    <script src="assets/js/eventos.js" defer></script>
-    <script src="assets/js/events-past.js" defer></script>
+    <script src="assets/js/promo-tienda.js" ></script>
+    <script src="assets/js/eventos.js" ></script>
+    <script src="assets/js/events-past.js"></script>
 
     <!-- Firebase (Firestore/Auth) -->
     <script src="https://www.gstatic.com/firebasejs/11.1.0/firebase-app-compat.js"></script>
@@ -585,6 +585,6 @@
     <script src="https://www.gstatic.com/firebasejs/11.1.0/firebase-auth-compat.js"></script>
 
     <!-- Medallero -->
-    <script src="assets/js/medallero-index.js" defer></script>
+    <script src="assets/js/medallero-index.js"></script>
   </body>
 </html>
