Ajuste menu desplegable mobile en subpaginas

--- a/horas-destacadas/index.html
+++ b/horas-destacadas/index.html
@@ -8,7 +8,7 @@
     <meta name="robots" content="index, follow" />
     <meta property="og:title" content="Nidos Argentina | Horas Destacadas" />
     <meta property="og:description" content="Aquí encotraras los bonus y Pokémon para las horas destacadas el mes" />
-    <meta property="og:image" content="../../assets/images/logo/favicon.png" />
+    <meta property="og:image" content="../assets/images/logo/favicon.png" />
     <meta property="og:url" content="https://nidosargentina.com/horas-destacadas" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Nidos Argentina | Horas Destacadas" />
@@ -16,12 +16,12 @@
     <meta name="twitter:image" content="assets/images/logo/favicon.png" />
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" as="style" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
-    <link href="../../libs/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="../../assets/css/fontawesome.css" />
-    <link rel="stylesheet" href="../../assets/css/templatemo-cyborg-gaming.css?v=1.5" />
-    <link rel="stylesheet" href="../../assets/css/owl.css" />
-    <link rel="stylesheet" href="../../assets/css/animate.css" />
-    <link rel="icon" href="../../assets/images/logo/favicon.png" type="image/png" />
+    <link href="../libs/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="../assets/css/fontawesome.css" />
+    <link rel="stylesheet" href="../assets/css/templatemo-cyborg-gaming.css?v=1.5" />
+    <link rel="stylesheet" href="../assets/css/owl.css" />
+    <link rel="stylesheet" href="../assets/css/animate.css" />
+    <link rel="icon" href="../assets/images/logo/favicon.png" type="image/png" />
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
     <title>Nidos Argentina | Horas Destacadas</title>
 </head>
@@ -81,17 +81,17 @@
       </footer>
     </div>
 
-    <script src="../../assets/js/menu.js?v=1.4"></script>
-    <script src="../../assets/js/footer.js?v=1.1"></script>
-    <script src="../../libs/jquery/jquery.min.js"></script>
-    <script src="../../libs/bootstrap/js/bootstrap.min.js"></script>
-    <script src="../../assets/js/isotope.min.js"></script>
-    <script src="../../assets/js/owl-carousel.js"></script>
-    <script src="../../assets/js/tabs.js"></script>
-    <script src="../../assets/js/popup.js"></script>
-    <script src="../../assets/js/custom.js"></script>
-    <script src="../../assets/js/events-past.js"></script>
-    <script src="../../assets/js/horas-destacadas.js?v=1.11"></script>
-    <script src="../../assets/js/politicas.js?v=1.3"></script>
+    <script defer src="../assets/js/menu.js?v=1.4"></script>
+    <script src="../assets/js/footer.js?v=1.1"></script>
+    <script src="../libs/jquery/jquery.min.js"></script>
+    <script src="../libs/bootstrap/js/bootstrap.min.js"></script>
+    <script src="../assets/js/isotope.min.js"></script>
+    <script src="../assets/js/owl-carousel.js"></script>
+    <script src="../assets/js/tabs.js"></script>
+    <script src="../assets/js/popup.js"></script>
+    <script src="../assets/js/custom.js"></script>
+    <script src="../assets/js/events-past.js"></script>
+    <script src="../assets/js/horas-destacadas.js?v=1.11"></script>
+    <script src="../assets/js/politicas.js?v=1.3"></script>
   </body>
 </html>
