--- a/nosotros/index.html
+++ b/nosotros/index.html
@@ -465,7 +465,7 @@
       </footer>
     </div>
 
-    <script src="../assets/js/menu.js"></script>
+    <script defer src="../assets/js/menu.js"></script>
     <script src="../assets/js/footer.js"></script>
     <script src="../assets/js/politicas.js"></script>
     <script src="../libs/jquery/jquery.min.js"></script>
