--- a/pokemon-regionales/index.html
+++ b/pokemon-regionales/index.html
@@ -61,7 +61,7 @@
     <footer class="text-white mt-4 p-2" style="background-color:#ffffff;border-radius:23px"></footer>
   </div>
 
-  <script src="../../assets/js/menu.js"></script>
+  <script defer src="../assets/js/menu.js"></script>
   <script src="../../assets/js/footer.js"></script>
   <script src="../../libs/jquery/jquery.min.js"></script>
   <script src="../../libs/bootstrap/js/bootstrap.min.js"></script>
