--- a/rotacion-de-temporada/index.html
+++ b/rotacion-de-temporada/index.html
@@ -51,7 +51,7 @@
       </footer>
     </div>
 
-    <script src="../../assets/js/menu.js"></script>
+    <script defer src="../assets/js/menu.js"></script>
     <script src="../../assets/js/footer.js"></script>
     <script src="../../libs/jquery/jquery.min.js"></script>
     <script src="../../libs/bootstrap/js/bootstrap.min.js"></script>
