--- a/medallero/index.html
+++ b/medallero/index.html
@@ -120,7 +120,7 @@
     <script src="https://www.gstatic.com/firebasejs/11.1.0/firebase-firestore-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/11.1.0/firebase-auth-compat.js"></script>
     
-    <script src="../assets/js/menu.js"></script>
+    <script defer src="../assets/js/menu.js"></script>
     <script src="../assets/js/footer.js"></script>
     <script src="../libs/jquery/jquery.min.js"></script>
     <script src="../libs/bootstrap/js/bootstrap.min.js"></script>
